--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,8 +124,10 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
-    background-size:cover;
+    /* height: 50%; */
+    /* width: 50%; */
+    background: url("../images/banner-images/banner-image-1.png") no-repeat center top;
+    background-size: auto;
 }
 
 
